Get all information route and aggregation query added
